fixed the alignment issues in the header and the aside section moving it up the page

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -4,8 +4,9 @@
     margin: 0;
 }
 
-body {
+html, body {
     background-color: #d9dcd6;
+    margin: 0;
 }
 
 .header {
@@ -13,6 +14,8 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    position: relative;
+    margin-top: -28px;
 }
 
 .header h1 {
@@ -25,10 +28,10 @@ body {
 }
 
 .header div {
-    padding-top: 15px;
+    padding-top: 1px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     font-size: 20px;
 }
 
@@ -85,6 +88,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
     position:relative;
+    top: -60em;
 }
 
 .benefit-lead {
